samples/_failures_safe/1761456699_f625e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5731a28.c: In function ‘main’:
./samples/SAFE/__tmp_f5731a28.c:154:5: error: ‘print_’ undeclared (first use in this function); did you mean ‘printf’?
  154 |     print_
      |     ^~~~~~
      |     printf
./samples/SAFE/__tmp_f5731a28.c:154:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f5731a28.c:154:11: error: expected ‘;’ at end of input
  154 |     print_
      |           ^
      |           ;
./samples/SAFE/__tmp_f5731a28.c:154:5: error: expected declaration or statement at end of input
  154 |     print_
      |     ^~~~~~
